--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#secret
+.env
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -236,3 +239,4 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
